LeafletMap: add proper configs for GeoJSON layers
